--- a/ba.html
+++ b/ba.html
@@ -71,7 +71,7 @@
 			</ul>
 		</div>
 		<!-- jQuery is required -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+		<script src="js/jquery.js"></script>
 		<!-- UIkit JS -->
 		<script src="js/uikit.min.js"></script>
 		<script src="js/uikit-icons.min.js"></script>
