--- a/en.html
+++ b/en.html
@@ -22,7 +22,7 @@
 			<nav class="uk-navbar uk-navbar-container uk-margin uk-navbar-primary">
 				<div class="uk-navbar-left">
 					<a class="uk-navbar-toggle" href="#" uk-toggle="target: #offcanvas-slide">
-						<a href="./" uk-icon="icon: chevron-left; ratio: 2"></a>
+						<a href="index.html" uk-icon="icon: chevron-left; ratio: 2"></a>
 					</a>
 				</div>
 				<div class="uk-navbar-right">
@@ -40,11 +40,11 @@
 					<button class="uk-offcanvas-close" type="button" uk-close></button>
 					<h3>Departments</h3><p></p>
 					<ul class="uk-list uk-list-divider">
-						<li><a href="./">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="cs.html">Computer science</a></li>
 						<li><a href="hm.html">Humanities</a></li>
 						<li><a href="ba.html">Business Admin</a></li>
-						<li><a href="#">Engineering</a></li>
+						<li><a href="en.html">Engineering</a></li>
 					</ul>
 				</div>
 			</div>
