--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 					<button class="uk-offcanvas-close" type="button" uk-close></button>
 					<h3>Departments</h3><p></p>
 					<ul class="uk-list uk-list-divider">
-						<li><a href="#">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li><a href="cs.html">Computer science</a></li>
 						<li><a href="hm.html">Humanities</a></li>
 						<li><a href="ba.html">Business Admin</a></li>
