--- a/ba.html
+++ b/ba.html
@@ -54,11 +54,13 @@
 				<div class="uk-card uk-card-primary uk-card-body">
 					<h3 class="uk-card-title">Business Administration</h3>
 					<p>
-						Since our founding in 2002, Ashesi has established a reputation as a leader in undergraduate education in Africa, with an educational experience that fosters ethical leadership, an entrepreneurial mindset and the ability to solve complex problems. These qualities are what set Ashesi students and alumni apart. Across various industries today, Ashesi graduates are highly sought, and over 90% have stayed to work for progress in Africa.
-						At the heart of the Ashesi experience is our interdisciplinary core curriculum, and our campus culture. Ashesi students come from 24 countries across the globe to learn, live and innovate together; almost half are on scholarships, and 48% are women. On campus, these students join with faculty and Ashesi leadership on a shared mission to transform the African continent.
-						Mission
-					To educate ethical and entrepreneurial leaders in Africa; to cultivate in students, the critical thinking skills, concern for others and the courage it will take to transform our continent.</p>
-				</div>
+						As new technological advances and an increasingly global economy transform the way businesses operate, it is extremely important for any nation to train the men and women who can lead their economies through this change. Ashesi seeks to train such people for Africa, by providing a well-rounded business education that emphasizes the fundamentals of business, and introduces students to trends that are changing the business world. The goal is that Ashesi's business graduates will be capable of playing active, diverse roles, to shape the growth of African businesses and organisations.
+
+Management Information Systems
+In today’s rapidly changing business world, a company’s ability to compete depends on how quickly that enterprise can respond to change. Central to this ability, is the successful use of information, and by extension, the appropriate deployment of information technology.
+
+The Management Information Systems program at Ashesi University seeks to train graduates, who are able to influence business and organisational strategy through deep understanding of information technology use. This interdisciplinary program trains graduates who are uniquely empowered to enhance the competitiveness of enterprises in the new knowledge economy.</p>
+					</div>
 			</div>
 		</div>
 		<div>
