--- a/cs.html
+++ b/cs.html
@@ -56,11 +56,13 @@
 			<div class="uk-card uk-card-primary uk-card-body">
 				<h3 class="uk-card-title">Computer Science</h3>
 				<p>
-					Since our founding in 2002, Ashesi has established a reputation as a leader in undergraduate education in Africa, with an educational experience that fosters ethical leadership, an entrepreneurial mindset and the ability to solve complex problems. These qualities are what set Ashesi students and alumni apart. Across various industries today, Ashesi graduates are highly sought, and over 90% have stayed to work for progress in Africa.
-					At the heart of the Ashesi experience is our interdisciplinary core curriculum, and our campus culture. Ashesi students come from 24 countries across the globe to learn, live and innovate together; almost half are on scholarships, and 48% are women. On campus, these students join with faculty and Ashesi leadership on a shared mission to transform the African continent.
-					Mission
-				To educate ethical and entrepreneurial leaders in Africa; to cultivate in students, the critical thinking skills, concern for others and the courage it will take to transform our continent.</p>
-			</div>
+					Ashesi's Computer Science programme focuses not only on software design and programming, but also on empowering young people to be at the forefront of African growth by harnessing the power of technology. Students in the Computer Science programme are taken through robust foundational courses and projects that prepare them to engage new technologies, and create tech solutions for African needs.
+
+Management Information Systems
+In today’s rapidly changing business world, a company’s ability to compete depends on how quickly that enterprise can respond to change. Central to this ability, is the successful use of information, and by extension, the appropriate deployment of information technology.
+
+The Management Information Systems program at Ashesi University seeks to train graduates, who are able to influence business and organisational strategy through deep understanding of information technology use. This interdisciplinary program trains graduates who are uniquely empowered to enhance the competitiveness of enterprises in the new knowledge economy.</p>
+				</div>
 		</div>
 	</div>
 
