--- a/en.html
+++ b/en.html
@@ -54,10 +54,17 @@
 				<div class="uk-card uk-card-primary uk-card-body">
 					<h3 class="uk-card-title">Engineering Dept.</h3>
 					<p>
-						Since our founding in 2002, Ashesi has established a reputation as a leader in undergraduate education in Africa, with an educational experience that fosters ethical leadership, an entrepreneurial mindset and the ability to solve complex problems. These qualities are what set Ashesi students and alumni apart. Across various industries today, Ashesi graduates are highly sought, and over 90% have stayed to work for progress in Africa.
-						At the heart of the Ashesi experience is our interdisciplinary core curriculum, and our campus culture. Ashesi students come from 24 countries across the globe to learn, live and innovate together; almost half are on scholarships, and 48% are women. On campus, these students join with faculty and Ashesi leadership on a shared mission to transform the African continent.
-						Mission
-					To educate ethical and entrepreneurial leaders in Africa; to cultivate in students, the critical thinking skills, concern for others and the courage it will take to transform our continent.</p>
+						The engineers tasked to solve society's problems need a broad range of skills that will allow them to tap into ideas beyond one engineering field; they have to be entrepreneurs who can see through challenges and find solutions within a local context. They must be ethical and responsible, and see the short and long term effects of their decisions on society and the environment. They also have to be leaders who can communicate their ideas and work with teams to solve problems.
+
+
+
+Ashesi’s Engineering Programme is designed to train such engineers. In addition to engineering specialties (computer, electrical and electronic, or mechanical), there will be a strong emphasis on foundational concepts, systems thinking and problem-solving that cross traditional boundaries. Ashesi’s Engineering graduates will bring the trademark Ashesi strengths—strong ethics, leadership skills, and a commitment to positive change— that will help create a new era of progress in African industry and infrastructure.
+
+The goals of Ashesi's engineering programme are:
+
+Give students broad engineering skills that will enable them solve the challenging problems of our society, and core entrepreneurial skills to think about how to transfer their solutions to the marketplace.
+Enable students to be creative and critical thinkers to find the best solutions to the problems of our society, even in situations they have never encountered before. Instill in students ethical and responsible behaviours that place doing the right thing for society and the environment above personal or professional gain.
+Give students strong leadership skills that will enable them lead in solving the problems they encounter, and prepare students with excellent communication skills to enable them to communicate their knowledge and ideas to supervisors, colleagues, customers, and society at large.</p>
 				</div>
 			</div>
 		</div>
