--- a/hm.html
+++ b/hm.html
@@ -54,10 +54,21 @@
 				<div class="uk-card uk-card-primary uk-card-body">
 					<h3 class="uk-card-title">Sciences and humanities</h3>
 					<p>
-						Since our founding in 2002, Ashesi has established a reputation as a leader in undergraduate education in Africa, with an educational experience that fosters ethical leadership, an entrepreneurial mindset and the ability to solve complex problems. These qualities are what set Ashesi students and alumni apart. Across various industries today, Ashesi graduates are highly sought, and over 90% have stayed to work for progress in Africa.
-						At the heart of the Ashesi experience is our interdisciplinary core curriculum, and our campus culture. Ashesi students come from 24 countries across the globe to learn, live and innovate together; almost half are on scholarships, and 48% are women. On campus, these students join with faculty and Ashesi leadership on a shared mission to transform the African continent.
-						Mission
-					To educate ethical and entrepreneurial leaders in Africa; to cultivate in students, the critical thinking skills, concern for others and the courage it will take to transform our continent.</p>
+						Ashesi's library is primarily digital, with subscriptions to a number of electronic information resources, including the PERI databases which give access to over 30,000 scholarly journals. Ashesi's library is not limited to the library building; it reaches out, with cutting edge information, into faculty and administrative offices, classrooms, cafeterias, and even outdoor gathering spaces.
+
+The electronic library is supplemented by a physical collection that is currently 27,000 volumes, as well as a variety of international and local magazines, newspapers, and research publications.
+
+Warren Library Facilities
+Two floors with seating for 150 users
+The Joseph and Miyuki Dadzie Seminar room (301) - which can be booked by small groups of students, faculty and staff
+The Catherine and Patrick Awuah Snr Seminar room (302) - which is occupied by the Learning Lab
+Computer workstations
+Photocopiers
+Scanner
+Binder
+Laminator
+On-Line Databases
+The library subscribes to a number of electronic information resources, including the PERI databases which gives access to over 30,000 scholarly journals. Most are available via IP address for computers using Ashesi's network, including those using the wifi.</p>
 				</div>
 			</div>
 		</div>
